--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
 DB_URL=mongodb+srv://SPM:dLBhaxm8RklBqQig@spm.uf7tkc9.mongodb.net/SoftwareProcessModeling?retryWrites=true&w=majority
+
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
